Further fix on video display on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ h2 {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 25%;
+    align-items: center;
+    width: 50%;
     
 }
 
@@ -203,7 +204,7 @@ header {
     width: 100%;
     background-color: #D3BBA6;
     float: left;
-    padding: 25px 50px 75px;
+    padding: 25px;
     box-sizing: border-box;
 }
 #footer {
@@ -219,6 +220,8 @@ header {
 /* Media Queries */
 
 @media screen and (max-width: 1200px) {
+
+    
     #opening-text {
         height: 300px;
         width: 100%;
@@ -300,10 +303,10 @@ header {
 
 @media screen and (max-width: 950px) {
 
-    .logo img {
-        max-width: 100%;
-        max-height: auto;
+    #logo{
+        padding: 50px;
     }
+           
     #hero {
         height: 300px;
         width: 100%;
@@ -360,18 +363,13 @@ header {
         padding: 25px;
         box-sizing: border-box;
     }
-    #suppliers {
-        width: 100%;
-        height: 0;
-        padding-bottom: 56.25%;
-        position: relative;
-    }
-
+    
     #suppliers iframe {
-        position: absolute;
         width: 100%;
         height: 100%;
+        
     }
+
     #footer {
         font-size: 80%;
         height: fit-content;
